--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,6 @@
 
 body {
     font-family: 'Montserrat', arial, sans-serif;
-    font-size: 20px;
     color: black;
 }
 
@@ -45,8 +44,8 @@ body {
 }
 
 #main-nav {
-    grid-column: 4/9;
-    margin-top: 49px;
+    grid-column: 4/10;
+    margin-top: 45px;
 }
 
 #main-nav ul {
@@ -55,13 +54,21 @@ body {
 
 #main-nav ul li {
     display: inline;
-    font-size: 20px;
+    font-size: 22px;
     margin-right: 39px;
 }
 
 #main-nav ul li a {
     color: #000;
     text-decoration: none;
+    letter-spacing: 2px;
+}
+
+#main-nav ul li a:hover {
+    font-size: 23px;
+    color: #BC8D0A;
+    font-weight: 600;
+    letter-spacing: 3px;
 }
 
 #search {
@@ -77,54 +84,260 @@ body {
     margin-top: 10px;
 }
 
+#search:checked {
+   color: #1f221a;
+   cursor: auto;
+}
+
 /* 4. ---Main Hero Image--- */
-#hero-image {
-    background-image: url(../images/memories.jpg);
-    grid-column: 1/-1;
+.hero-image {
+    margin-left: -19px;
 }
 
-#hero-image h2 {
-    grid-column: 5/8;
-    padding-top: 20%;
-    color: #fff;
+#hero-con {
+    color: #ffffff;
+    grid-column: 2/6;
+    text-align: center;
+    margin-top: 40px;
+    font-size: 50px;
 }
 
-#hero-image a {
-    border: solid 2px #fff;
-    color: #fff;
-    margin-bottom: 30px;
+#hero a {
+    color: #000;
     text-decoration: none;
-    margin-left: 30px;
+    list-style: none;
+    background-color: #fff;
+    margin-top: -500%;
+    margin-left: 50px;  
+    text-align: center;
+    padding-top: 20px;  
 }
 
 #shop {
-    grid-column: 5/6;
-    padding-top: 21px;
-    padding-right: 20px;
+	grid-column: 2/3;
+    width: 120%;
+    height: 50px;
+    
 }
 
 #learn {
-    grid-column: 7/8;
-    padding-top: 21px;
+	width: 120%;
+    height: 50px;
+	grid-column: 3/4;
+    margin-left: 120px;
+    
 }
 
-/* 5. ---Features--- */
-
+/* 5. ---Memories--- */
+#fun {
+    grid-column: 3/11;
+    padding-top: 10%;
+}
 #memories {
-    background-image: url(../images/memories.jpg);
-    grid-column: 2/11;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    background-color: #DFDFDF;
+}
+
+#memories a {
+    color: #000;
+    text-decoration: none;
 }
 
 #memories p {
-    grid-column: 5/8;
-    color: #fff;
-    padding-top: 30px;
-    padding-bottom: 40px;
+    grid-column: 4/7;
+    text-align: center;
+    font-size: 25px;
+    background-color: #fff;
+    margin-top: 15%;
+    margin-bottom: 15%;
+    padding-top: 15px;
+    padding-bottom: 15px;   
 }
 
-/* 6. ---Footer--- */
+#memories p:last-child {
+    grid-column: 8/11;
+    margin-top: 20px;
+    margin-top: 15%;
+    margin-bottom: 15%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+/* 6. ---Shop--- */
+#main-shop {
+    padding-bottom: 70px;
+    padding-top: 100px;
+    background-color: bisque;
+    margin-bottom: 20px;
+}
+
+#main-shop h2 {
+    grid-column: 6/7;
+    margin-left: 92px;
+    padding-bottom: 30px;
+}
+
+.shop-box {
+    list-style: none;
+    color: #000;
+    text-decoration: none;
+    margin-top: -20px;  
+    margin-bottom: 50%;
+}
+.shop-box p {
+    margin-left: 100px;
+    margin-top: -70px;
+}
+
+
+#shop-more a {
+    list-style: none;
+}
+
+#shop-more {
+    grid-column: 6/8;
+    color: #fff;
+    border: solid 4px #fff;
+    padding-left: 60px;
+    text-decoration: none;
+    margin-top: 40%;
+    
+}
+
+#product1 {
+    grid-column: 2/4;
+    padding-left: 50px;
+}
+#product2 {
+    grid-column: 4/6;
+    padding-left: 45%;
+}
+#product3 {
+    grid-column: 7/9;
+    padding-left: 25%;
+}
+#product4 {
+    grid-column: 9/11;
+    padding-left: 50%;
+}
+
+/* 7. ---Blog--- */
+#blog {
+    grid-column: 3/10;
+    text-align: center;
+
+}
+
+#blog-c {
+    background-color: #DFDFDF;
+}
+
+#week {
+    grid-column: 3/6;
+    grid-row: 2/3;
+}
+
+#week p{
+    margin-top: -10px;
+    text-align: justify;
+    margin-left: 55px;
+    font-size: 22px;
+    font-weight: 100;
+}
+
+#week h3{
+    margin-top: 0;
+    text-align: center;
+    font-size: 22px;
+}
+#week-img {
+    border: solid 50px #DFDFDF;
+    margin-right: 20px;
+    grid-column: 3/6;
+    grid-row: 2/3;
+}
+
+#party {
+    grid-column: 7/10;  
+}
+
+#party h3 {
+    text-align: center;
+}
+
+#party p {
+    text-align: justify;
+    margin-top: -10px;
+    margin-left: 20px;
+}
+
+#party-img {
+    margin-top: 20%; 
+    margin-left: -50%;
+}
+
+#read {
+    grid-column: 3/5;
+    color: #1F221A;
+    border: solid 4px #1F221A;
+    text-decoration: none;
+    padding-left: 50px;
+    margin-top: -30%;
+    margin-bottom: 60px;
+    margin-left: 60px;
+    font-size: 16px;
+}
+
+#read a {
+    list-style: none;
+}
+
+/* 8. ---Footer--- */
+#history {
+    grid-column: 2/5;
+}
+
+#history p {
+    font-size: 22px;
+    line-height: 30px;
+    text-align: justify;
+    margin-left: 10px;
+}
+
+#history h2 {
+    font-size: 22px;
+    text-align: center;
+    letter-spacing: 3px; 
+    margin-top: 30%;  
+}
+
+#video {
+    margin-top: 90px;
+    grid-column: 5/10;
+    margin-bottom: 90px;
+    margin-left: 20%;
+    height: 500px;
+    width: 927px;
+    border: none;
+    
+}
+
+
+#full-video {
+    grid-column: 2/4;
+    color: #1F221A;
+    border: solid 4px #1F221A;
+    text-decoration: none;
+    padding-left: 70px;
+    margin-bottom: 50px;
+    margin-left: 40px;
+    font-size: 16px;
+}
+
+#full-video a {
+    list-style: none;
+}
+
+/* 9. ---Footer--- */
 #f-logo {
     grid-column: 2/3;  
     margin-top: 124px;
@@ -138,10 +351,56 @@ body {
 
 #footer-nav {
     grid-column: 4/4;
+    margin-top: 10px;
+    font-size: 20px;
 }
- 
+#footer-nav ul { 
+    list-style: none;
+    grid-column: 1/3;
+    margin-top: -20px;
+    text-align: center;
+    margin-left: -90%;
+}
+
 #footer-nav li a {
     color: #fff;
-    list-style: none;
     text-decoration: none;
+}
+
+#footer-icons {
+	grid-column: 5/6 ;   
+}
+
+#footer-icons ul {
+	display: flex;
+    list-style: none;
+}
+
+#subscribe {
+    grid-column: 7/11;
+    font-size: 22px;
+}
+
+#username {
+    grid-column: 7/8;
+    width: 193px;
+    height: 27px;
+    border: solid 3px #fff;
+    
+}
+
+#mail {
+    grid-column: 8/10;
+}
+
+#mail {
+    padding: 12px;
+	padding-right: 25px;
+    border-radius:  5px;
+    background-color: #ffffff;
+    margin-bottom: 15px;
+    color: rgb(0, 0, 0);
+	font-size: 15px;
+	margin-left: 7px;
+	width: 200px;
 }
