--- a/css/main.css
+++ b/css/main.css
@@ -347,19 +347,27 @@ body {
     background-color: #1F221A;
     color: #fff;
     grid-auto-rows: min-content;
+    padding-top: 40px;
 }
 
 #footer-nav {
     grid-column: 4/4;
-    margin-top: 10px;
+    margin-top: 17px;
     font-size: 20px;
 }
+
+#footer-nav h3 {
+    margin-left: -20px;
+    padding-bottom: 10px;
+}
+
 #footer-nav ul { 
     list-style: none;
     grid-column: 1/3;
     margin-top: -20px;
     text-align: center;
     margin-left: -90%;
+    line-height: 50px;
 }
 
 #footer-nav li a {
@@ -376,31 +384,188 @@ body {
     list-style: none;
 }
 
+#footer-icons ul li {
+    padding-left: 30px;
+}
+ #contact {
+    grid-column: 5/7;
+    margin-top: 10px;
+    font-size: 20px;
+    margin-left: 30px;
+ }
+
+#contact p {
+    line-height: 50px;
+    text-align: center;
+}
+
+#contact h2 {
+    margin-bottom: 20px;
+    text-align: center;
+}
 #subscribe {
-    grid-column: 7/11;
-    font-size: 22px;
+    grid-column: 7/12;
+    font-size: 20px;
+    margin-left: 53px;
+    margin-top: 10px;
+}
+
+#subscribe h2 {
+    margin-bottom: 37px;
 }
 
 #username {
     grid-column: 7/8;
-    width: 193px;
+    width: 273px;
     height: 27px;
     border: solid 3px #fff;
-    
+    background-color: #1F221A;
+    color:#fff;
+    padding: 12px;
+    padding-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 #mail {
-    grid-column: 8/10;
+    grid-column: 8/12;
+    width: 293px;
+    height: 27px;
+    border: solid 3px #fff;
+    background-color: #1F221A;
+    color:#fff;
+    padding: 12px;
 }
 
-#mail {
+#fav {
     padding: 12px;
 	padding-right: 25px;
+    background-color: #1F221A;
+    margin-bottom: 15px;
+    color: #fff;
+	width: 635px;
+    height: 37px;
+    margin-bottom: 20px;
+}
+
+#sub {
+	border-radius:  5px;
+    background-color: #ffffff;
+    margin-bottom: 15px;
+    color: #000;
+	font-size: 20px;
+	width: 160px;
+	height: 49px;
+}
+
+#sub:hover {
+    color: #BC8D0A;
+    border: solid 3px #fff;
+    background-color: #1F221A;
+    font-size: 24px;
+}
+
+/* 9. ---Contact Us--- */
+#issues {
+    background-image: url(../images/desktop-contactPage-background.svg);
+    height: 1028px;
+    width: 1920px;
+    margin-bottom: 20px;
+    margin-left: -19px;
+}
+
+#issues ul li{
+    list-style: none;
+    grid-column: 8/12;
+}
+
+#issues ul {
+        line-height: 150px;
+        margin-left: 20px;
+        padding-top: 170px;
+}
+
+
+#issues ul li a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 43px;
+}
+
+#contact-form h2 {
+	color: #fff;
+    font-size: 50px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+#contact-form h3 {
+	color: #fff;
+    font-size: 30px;
+    text-align: center;
+}
+
+#contact-form li {
+	color: #fff;
+    font-size: 22px;
+    list-style: none;
+    display: inline;
+    padding-left: 30px;
+}
+
+#contact-form ul {
+    display: inline;
+    text-align: center;
+}
+
+#contact-form input[type="checkbox"] {
+	height: 23px;
+    width:40px ;
+}
+
+#contact-form form {
+	display: flex;
+	flex-direction: column;
+}
+
+#contact-form {
+	grid-column: 3/11;
+	padding: 40px 20px 40px 20px;
+	box-shadow: 5px 5px 5px rgba(75, 75, 75, 0.407);
+	margin-bottom: 45px;
+	margin-top: 90%;
+    background-color: #BC8D0A;
+}
+
+#contact-form input, textarea {
+    padding: 22px;
     border-radius:  5px;
     background-color: #ffffff;
     margin-bottom: 15px;
     color: rgb(0, 0, 0);
-	font-size: 15px;
-	margin-left: 7px;
-	width: 200px;
+	font-size: 25px;
+}
+
+#contact-form textarea {
+    height: 200px;
+}
+
+#contact-form input[type="submit"] {
+    width: 180px;
+	font-size: 25px;
+	font-weight: bold;
+   	padding-right: 30px;
+    background-color: #ffffff;
+    color: #BC8D0A;
+    border: none;
+    transition: all .1s ease-in;
+    align-self: center;
+    letter-spacing: 3px;
+}
+
+#contact-form input[type="submit"]:hover {
+	background-color:#1f221a;
+	border-radius: 10px;
+	border: solid 4px #1F221A;
+	cursor: pointer;
 }
