--- a/css/mobile-main.css
+++ b/css/mobile-main.css
@@ -38,7 +38,7 @@ div,p,body,header,footer,section,article,nav {
 /* 1. ---General Styles--- */
 
 body {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 12px;
 }
 
@@ -70,7 +70,7 @@ you work on and the intended audience, we may go as low as 320px */
 
 #container {
 	margin: 0 auto;
-	width: 428px;
+	width: 375px;
 }
 
 /* 2. ---Grid--- */
@@ -86,17 +86,16 @@ you work on and the intended audience, we may go as low as 320px */
 /* 3. ---Header--- */
 
 #header-con {
-	background-color: #F4C8C3;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	background-color: #fff;
+	padding-top: 5px;
+	height: 97px;
 }
 
 #logo {
-	margin-left: 21px;
 	margin-bottom: 10px;
-	margin-top: 10px;
+	margin-top: 15px;
 	grid-column: 1/1;
-	height: 90px;
+	height: 100px;
 }
 
 #search-header {
@@ -107,12 +106,18 @@ you work on and the intended audience, we may go as low as 320px */
     display: flex;
     justify-content: center;
     align-items: center;
-	height: 35px;
-	width: 180px;
+	height: 30px;
+	width: 150px;
     border: 2px solid #1F221A;
 	border-radius: 50px;
-	margin-top: 30px;
-	margin-left: 55px;
+	margin-top: 33px;
+	margin-left: 28px;
+}
+
+.fa-search {
+    margin-left: -45px;
+    margin-right: 30px;
+    font-size: 17px;
 }
 
 #search-header h3 {
@@ -127,15 +132,625 @@ you work on and the intended audience, we may go as low as 320px */
 } */
 
 .openMenu {
-    margin-top: 12px;
-    margin-left: 0px;
+    margin-top: 10px;
+    margin-left: -60px;
     font-size: 35px;
 	grid-column: -1/-1;
-	margin-top: 30px;
+	margin-top: 28px;
+	font-size: 40px;
 }
 
-.fa-search {
-    margin-left: -55px;
-    margin-right: 40px;
-    font-size: 17px;
+/* 4. ---Main Hero Image--- */
+
+#hero-con {
+	background-color: #aaaaaa;
+	background: url("../images/hero-image-mobile.jpg");
+	height: 590px;
+}
+
+#hero-text {
+	grid-column: 1/-1;
+}
+
+#hero-text h2 {
+	font-size: 35px;
+	color: #fff;
+	margin-top: 24px;
+	/* margin-left: 10px; */
+	font-weight: 400;
+	text-align: center;
+}
+
+.shop-now-header {
+	grid-column: 1/2;
+    color: #ffffff;
+	border: 2px solid #fff;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	height: 43px;
+	width: 135px;
+	border-radius: 2px;
+	margin-top: -7px;
+	margin-left: 22px;
+	font-weight: 400;
+}
+
+.shop-now-header:hover {
+	background-color: #DFDFDF;
+    color: #1F221A;
+	border-radius: 5px;
+	transition: .1s;
+}
+
+
+.learn-more-header {
+	grid-column: 3/4;
+    color: #ffffff;
+	border: 2px solid #fff;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	height: 43px;
+	width: 135px;
+	border-radius: 2px;
+	margin-top: -7px;
+	/* margin-left: 0px; */
+	font-weight: 400;
+}
+
+.learn-more-header:hover {
+	background-color: #DFDFDF;
+    color: #1F221A;
+	border-radius: 5px;
+	transition: .1s;
+}
+
+/* 5. --- Best Deals--- */
+
+#best-deals-con {
+	background: url("../images/mobile-best-deals-picture.png");
+	background-repeat: no-repeat;
+	height: 135px;
+	position: relative;
+	border: 30px solid #BC8D0A;
+}
+
+#best-deals-con p {
+	grid-column: 1/4;
+	background-color: #dfdfdf;
+	height: 12px;
+	width: 180px;
+	text-align: center;
+	justify-content: center;
+	display: flex;
+	padding-top: 5px;
+	padding-bottom: 10px;
+	margin-top: 100px;
+	margin-left: 40px;
+	font-size: 7px;
+	color: #1F221A;
+	border-radius: 3px;
+}
+
+
+/* 6. ---Shop--- */
+
+#shop-con {
+	grid-column: 1/-1;
+	/* background-color: #1F221A; */
+	height: 815px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	animation: change 10s infinite ease-in-out;
+}
+
+@keyframes change{
+	0% {
+		background-color:  #1F221A;
+	}
+
+	12.5% {
+		background-color:  #BC8D0A;
+	}
+
+	25% {
+		background-color:  #e88b8b;
+	}
+
+	37.5% {
+		background-color:  #ead514;
+	}
+
+	50% {
+		background-color:  #e08314;
+	}
+
+	62.5% {
+		background-color:  #ead514;
+	}
+
+	75% {
+		background-color:  #e88b8b;
+	}
+
+	87.5% {
+		background-color:  #BC8D0A;
+	}
+
+	100% {
+		background-color:  #1F221A;
+	}
+}
+
+#shop-con h2 {
+	text-align: center;
+	display: flex;
+    justify-content: center;
+	padding-top: 30px;
+	font-size: 17px;
+	font-weight: 400;
+	color: #fff;
+}
+
+#shop-con p {
+	grid-column: 1/4;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+	padding-bottom: 10px;
+	margin: 0;
+	font-size: 8px;
+	color: #fff;
+}
+
+#first-product {
+	grid-column: 1/-1;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+	margin-top: 15px;
+}
+
+#first-product h3 {
+	color: #1F221A;
+	font-size: 13px;
+	position: absolute;
+	margin-top: 265px;
+}
+
+#first-product h3:hover {
+	color: #000;
+	font-size: 15px;
+}
+
+#second-product {
+	grid-column: 1/-1;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+	margin-top: 15px;
+}
+
+#second-product h3 {
+	color: #1F221A;
+	font-size: 13px;
+	position: absolute;
+	margin-top: 265px;
+}
+
+#second-product h3:hover {
+	color: #000;
+	font-size: 15px;
+}
+
+#original-product:hover {
+	border: 3px solid #fff;
+	border-radius: 2px;
+	transition: 0.1s;
+}
+
+#lemon-product:hover {
+	border: 3px solid #fff;
+	border-radius: 2px;
+	transition: 0.1s;
+}
+
+#grapefruit-product:hover {
+	border: 3px solid #fff;
+	border-radius: 2px;
+	transition: 0.1s;
+}
+
+#orange-product:hover {
+	border: 3px solid #fff;
+	border-radius: 2px;
+	transition: 0.1s;
+}
+
+.container {
+	text-align: center;
+	display: flex;
+    justify-content: center;
+}
+
+#shop-shopNow {
+	grid-column: 2/3;
+	border: 2px solid #fff;
+	border-radius: 2px;
+    color: #fff;
+    font-size: 9px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	height: 35px;
+	width: 80px;
+	margin-top: 18px;
+	margin-bottom: -12;
+	margin-left: 125px;
+}
+
+#shop-shopNow:hover {
+	background-color: #fff;
+	color: #1F221A;
+	transition: 0.1s;
+}
+
+
+/* 7. ---Blog--- */
+
+#blog-con {
+	grid-column: 1/-1;
+	background-color: #DFDFDF;
+	height: 375px;
+}
+
+#blog-con h2 {
+	text-align: center;
+	display: flex;
+    justify-content: center;
+	padding-top: 30px;
+	font-size: 17px;
+	font-weight: 400;
+	color: #1F221A;
+}
+
+#blog-con p {
+	grid-column: 1/4;
+	text-align: center;
+	display: flex;
+    justify-content: center;
+	padding-bottom: 15px;
+	font-size: 8px;
+	color: #1F221A;
+}
+
+#blog1-pic {
+	border: 15px solid #DFDFDF;
+	margin-left: -119px;
+}
+
+/* #blog1-pic:hover {
+	margin-top: -3px;
+	transition: 0.2s;
+} */
+
+#blog1 h3 {
+	font-size: 6px;
+	color: #1F221A;
+	position: absolute;
+    font-weight: 600;
+	margin-left: -104px;
+	margin-top: 155px;
+}
+
+#blog1 h3:hover {
+	font-size: 7px;
+}
+
+#blog1 p {
+	font-size: 5.5px;
+	color: #1F221A;
+	position: absolute;
+    font-weight: 400;
+	margin-left: -104px;
+	margin-top: 170px;
+	text-align: left;
+    justify-content: left;
+}
+
+#blog2-pic {
+	grid-column: 2/4;
+	margin-top: 23px;
+}
+
+/* #blog2-pic:hover {
+	margin-top: 20px;
+	transition: 0.2s;
+} */
+
+#blog2 h3 {
+	font-size: 6px;
+	color: #1F221A;
+    font-weight: 600;
+	margin-left: 86px;
+	margin-top: 210px;
+	position: absolute;
+}
+
+#blog2 h3:hover {
+	font-size: 7px;
+}
+
+#blog2 p {
+	font-size: 5.5px;
+	color: #1F221A;
+	position: absolute;
+    font-weight: 400;
+	margin-left: 86px;
+	margin-top: 228px;
+	text-align: left;
+    justify-content: left;
+}
+
+#read-more {
+	grid-column: 2/3;
+	border: 2px solid #1F221A;
+	border-radius: 2px;
+    color: #1F221A;
+    font-size: 6.5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	height: 25px;
+	width: 45px;
+	margin-top: 12px;
+	margin-left: 24px;
+}
+
+#read-more:hover {
+	background-color: #1F221A;
+	color: #fff;
+	transition: 0.1s;
+}
+
+/* 8. ---History--- */
+
+#history-con {
+	grid-column: 1/-1;
+	background-color: #BC8D0A;
+	height: 235px;
+}
+
+#history-pic {
+	grid-column: 1/4;
+	width: 242px;
+	height: 130px;
+	margin-left: 67px;
+	margin-top: 20px;
+}
+
+#history-pic:hover {
+	border: 2px solid #fff;
+	border-radius: 2px;
+	transition: 0.1s;
+}
+
+#history-text h2 {
+	grid-column: 1/4;
+	font-size: 9px;
+	color: #1F221A;
+    font-weight: 600;
+	margin-top: 12px;
+	margin-left: 45px;
+	position: absolute;
+}
+
+#history-text h2:hover {
+	font-size: 10px;
+}
+
+#history-text p {
+	grid-column: 1/4;
+	font-size: 7px;
+	color: #1F221A;
+	margin-top: 37px;
+	margin-left: 25px;
+	text-align: left;
+	display: flex;
+    justify-content: left;
+	position: absolute;
+}
+
+#full-video {
+	grid-column: 2/3;
+	border: 2px solid #1F221A;
+	border-radius: 2px;
+    color: #1F221A;
+    font-size: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+	height: 20px;
+	width: 40px;
+	margin-top: 5px;
+	margin-left: 225px;
+	position: absolute;
+}
+
+#full-video:hover {
+	background-color: #fff;
+	border: 2px solid #fff;
+	color: #1F221A;
+	transition: 0.1s;
+}
+
+/* 9. ---Footer--- */
+
+.footer-con {
+	height: 450px;
+	margin-top: 10px;
+	padding-top: 30px;
+	background-color: #1F221A;
+	color: #454545;
+	margin: 0 auto;
+}
+
+.fotter-con2 {
+	display: flex;
+	margin-top: -30px;
+}
+
+.footer-con h3 {
+	font-weight: 700;
+}
+
+.col-1 {
+	flex-grow: 2;
+	text-align: center;
+}
+
+.col-1 h3 {
+	color: #fff;
+	font-size: 17px;
+	font-weight: 700;
+}
+
+.footer div h3 {
+	font-weight: 300;
+	margin-bottom: 30px;
+	letter-spacing: 1px;
+}
+
+.col-2 {
+	text-align: center;
+	padding-left: 50px;
+}
+
+.col-2 a {
+	display: block;
+	text-decoration: none;
+	color: #fff;
+	margin-bottom: 10px;
+	font-size: 14px;
+	line-height: 15px;
+}
+
+.col-2-text {
+	padding-top: 10px;
+}
+
+.col-2 a:hover {
+	font-weight: 700;
+}
+
+.col-2 h3 {
+	font-size: 17px;
+	color: #fff;
+	padding-top: 40px;
+	font-weight: 700;
+}
+
+.col-3 {
+	text-align: center;
+	padding-left: 50px;
+}
+
+.col-3 h3 {
+	font-size: 17px;
+	color: #fff;
+	font-weight: 700;
+	padding-top: 40px;
+}
+
+.col-3 p {
+	color: #fff;
+	margin-bottom: -15px;
+	font-size: 14px;
+	padding: 20px;
+	margin-top: -20px;
+	line-height: 26px;
+	padding-top: 20px;
+	width: max-content;
+}
+
+form input {
+	width: 200px;
+	height: 40px;
+	border-radius: 5px;
+	text-align: center;
+	margin-top: 6px;
+	margin-bottom: 27px;
+	outline: none;
+	border: none;
+	font-size: 14px;
+	transition: .2s;
+}
+
+form input:hover {
+	background-color: #e7e7e7;
+	border-radius: 50px;
+}
+
+form button {
+	background: transparent;
+	border: 2px solid #fff;
+	color: #fff;
+	border-radius: 30px;
+	padding: 10px 30px;
+	cursor: pointer;
+	margin-bottom: 30px;
+	margin-top: -30px;
+	font-size: 14px;
+	transition: .2s;
+}
+
+form button:hover {
+	background-color: #1C4A47;
+	border-radius: 15px;
+}
+
+.social-icons {
+	margin-top: 10px;
+}
+
+.social-icons i {
+	font-size: 19px;
+	margin: 7px;
+	cursor: pointer;
+	color: #fff;
+}
+
+.social-icons i:hover {
+	color: #1C4A47;
+}
+
+
+#footer-box {
+	margin-top: 40px;
+	grid-column: 1/3;
+	background-color: #ddd;
+}
+
+#footer-newsletter {
+	margin-top: 100px;
+	grid-column: 1/-1;
+	background-color: #ddd;
+}
+
+/* Contact page */
+
+#hero-gallery-con {
+	background-color: #aaaaaa;
+	background: url("../images/mobile-gallery-hero-image.jpg");
+	height: 458px;
+}
+
+#footer-newsletter2 {
+	margin-top: 20px;
+	height:40px;
+	grid-column: 1/3;
+	background-color: #ddd;
 }
