--- a/css/mobile-main.css
+++ b/css/mobile-main.css
@@ -27,10 +27,11 @@ div,p,body,header,footer,section,article,nav {
     2. Grid
     3. Header
     4. Main Hero Image
-    5. Popular Categories
-    6. Why Kadot
-    7. Contact Form
-    8. Footer
+    5. Best Deals
+    6. Shop
+    7. Blog
+    8. History
+	9. Footer
 
 */
 
@@ -208,7 +209,7 @@ you work on and the intended audience, we may go as low as 320px */
 	transition: .1s;
 }
 
-/* 5. --- Best Deals--- */
+/* 5. ---Best Deals--- */
 
 #best-deals-con {
 	background: url("../images/mobile-best-deals-picture.png");
@@ -321,10 +322,10 @@ you work on and the intended audience, we may go as low as 320px */
 	margin-top: 265px;
 }
 
-#first-product h3:hover {
+/* #first-product h3:hover {
 	color: #000;
 	font-size: 15px;
-}
+} */
 
 #second-product {
 	grid-column: 1/-1;
@@ -341,33 +342,33 @@ you work on and the intended audience, we may go as low as 320px */
 	margin-top: 265px;
 }
 
-#second-product h3:hover {
+/* #second-product h3:hover {
 	color: #000;
 	font-size: 15px;
-}
+} */
 
 #original-product:hover {
 	border: 3px solid #fff;
 	border-radius: 2px;
-	transition: 0.1s;
+	transition: 0.2s;
 }
 
 #lemon-product:hover {
 	border: 3px solid #fff;
 	border-radius: 2px;
-	transition: 0.1s;
+	transition: 0.2s;
 }
 
 #grapefruit-product:hover {
 	border: 3px solid #fff;
 	border-radius: 2px;
-	transition: 0.1s;
+	transition: 0.2s;
 }
 
 #orange-product:hover {
 	border: 3px solid #fff;
 	border-radius: 2px;
-	transition: 0.1s;
+	transition: 0.2s;
 }
 
 .container {
@@ -566,9 +567,9 @@ you work on and the intended audience, we may go as low as 320px */
 
 #full-video {
 	grid-column: 2/3;
-	border: 2px solid #1F221A;
+	border: 2px solid #fff;
 	border-radius: 2px;
-    color: #1F221A;
+    color: #fff;
     font-size: 6px;
     display: flex;
     justify-content: center;
@@ -590,43 +591,22 @@ you work on and the intended audience, we may go as low as 320px */
 /* 9. ---Footer--- */
 
 .footer-con {
-	height: 450px;
+	height: 180px;
 	margin-top: 10px;
 	padding-top: 30px;
 	background-color: #1F221A;
-	color: #454545;
 	margin: 0 auto;
 }
 
-.fotter-con2 {
-	display: flex;
-	margin-top: -30px;
-}
-
-.footer-con h3 {
-	font-weight: 700;
-}
-
-.col-1 {
-	flex-grow: 2;
-	text-align: center;
-}
-
-.col-1 h3 {
-	color: #fff;
-	font-size: 17px;
-	font-weight: 700;
-}
-
-.footer div h3 {
-	font-weight: 300;
-	margin-bottom: 30px;
-	letter-spacing: 1px;
+#logo-footer {
+	margin-left: 22px;
+	margin-top: 30px;
 }
 
 .col-2 {
 	text-align: center;
-	padding-left: 50px;
+	margin-left: -80px;
+	margin-top: -150px;
 }
 
 .col-2 a {
@@ -634,8 +614,9 @@ you work on and the intended audience, we may go as low as 320px */
 	text-decoration: none;
 	color: #fff;
 	margin-bottom: 10px;
-	font-size: 14px;
-	line-height: 15px;
+	font-size: 8.5px;
+	line-height: 10px;
+	font-weight: 400;
 }
 
 .col-2-text {
@@ -643,11 +624,12 @@ you work on and the intended audience, we may go as low as 320px */
 }
 
 .col-2 a:hover {
-	font-weight: 700;
+	font-weight: 600;
+	font-size: 9;
 }
 
 .col-2 h3 {
-	font-size: 17px;
+	font-size: 10px;
 	color: #fff;
 	padding-top: 40px;
 	font-weight: 700;
@@ -655,76 +637,43 @@ you work on and the intended audience, we may go as low as 320px */
 
 .col-3 {
 	text-align: center;
-	padding-left: 50px;
+	margin-left: 100px;
+	margin-top: -151px;
 }
 
 .col-3 h3 {
-	font-size: 17px;
+	font-size: 10px;
 	color: #fff;
-	font-weight: 700;
-	padding-top: 40px;
+	font-weight: 600;
+	margin-left: 78px;
 }
 
 .col-3 p {
 	color: #fff;
 	margin-bottom: -15px;
-	font-size: 14px;
+	font-size: 8.5px;
 	padding: 20px;
-	margin-top: -20px;
-	line-height: 26px;
+	margin-top: -16px;
+	margin-left: 90px;
+	line-height: 20px;
 	padding-top: 20px;
 	width: max-content;
 }
 
-form input {
-	width: 200px;
-	height: 40px;
-	border-radius: 5px;
-	text-align: center;
-	margin-top: 6px;
-	margin-bottom: 27px;
-	outline: none;
-	border: none;
-	font-size: 14px;
-	transition: .2s;
-}
-
-form input:hover {
-	background-color: #e7e7e7;
-	border-radius: 50px;
-}
-
-form button {
-	background: transparent;
-	border: 2px solid #fff;
-	color: #fff;
-	border-radius: 30px;
-	padding: 10px 30px;
-	cursor: pointer;
-	margin-bottom: 30px;
-	margin-top: -30px;
-	font-size: 14px;
-	transition: .2s;
-}
-
-form button:hover {
-	background-color: #1C4A47;
-	border-radius: 15px;
-}
-
 .social-icons {
 	margin-top: 10px;
+	margin-left: 78px;
 }
 
 .social-icons i {
-	font-size: 19px;
+	font-size: 17px;
 	margin: 7px;
 	cursor: pointer;
 	color: #fff;
 }
 
 .social-icons i:hover {
-	color: #1C4A47;
+	color: #BC8D0A;
 }
 
 
@@ -734,23 +683,99 @@ form button:hover {
 	background-color: #ddd;
 }
 
-#footer-newsletter {
-	margin-top: 100px;
-	grid-column: 1/-1;
-	background-color: #ddd;
-}
-
 /* Contact page */
 
-#hero-gallery-con {
-	background-color: #aaaaaa;
-	background: url("../images/mobile-gallery-hero-image.jpg");
-	height: 458px;
+#contact-page {
+	background-color: #1f221a;
 }
 
-#footer-newsletter2 {
-	margin-top: 20px;
-	height:40px;
-	grid-column: 1/3;
-	background-color: #ddd;
+#contact-form {
+	grid-column: 1/-1;
+	padding: 40px 20px 40px 20px;
+	margin-bottom: -60px;
+	margin-top: 0;
+    background-color: #1f221a;
+}
+
+#contact-page-bg {
+	grid-column: 1/-1;
+	margin-left: -21px;
+	margin-bottom: 10px;
+}
+
+#contact-form h2 {
+	color: #fff;
+    font-size: 22px;
+    text-align: center;
+    font-weight: bolder;
+	margin-bottom: 30px;
+}
+
+#contact-form h3 {
+	color: #fff;
+    font-size: 14px;
+    text-align: center;
+	margin-bottom: 20px;
+}
+
+#contact-form li {
+	color: #fff;
+    font-size: 17px;
+    list-style: none;
+    display: inline;
+    margin: 30px;
+	margin-left: -30px;
+}
+
+#contact-form ul {
+    display: inline;
+    text-align: center;
+}
+
+#contact-form input[type="checkbox"] {
+	height: 20px;
+    width:40px ;
+}
+
+#contact-form form {
+	display: flex;
+	flex-direction: column;
+}
+
+#contact-form input, textarea {
+    padding: 22px;
+    border-radius:  5px;
+    background-color: #ffffff;
+    margin-bottom: 15px;
+    color: rgb(0, 0, 0);
+	font-size: 17px;
+}
+
+#contact-form textarea {
+    height: 125px;
+}
+
+#contact-form input[type="submit"] {
+    width: 180px;
+	font-size: 18px;
+	font-weight: bold;
+   	padding-right: 30px;
+	background-color:  #fff;
+	border: 2px solid #fff;
+	border-radius: 2px;
+    color: #1F221A;
+    border: none;
+    transition: all .1s ease-in;
+    align-self: center;
+    letter-spacing: 1px;
+	text-align: center;
+	justify-content: center;
+	display: flex;
+	margin-top: 15px;
+}
+
+#contact-form input[type="submit"]:hover {
+	background-color: #BC8D0A;
+	color: #fff;
+	cursor: pointer;
 }
