--- a/css/mobile-main.css
+++ b/css/mobile-main.css
@@ -149,6 +149,10 @@ you work on and the intended audience, we may go as low as 320px */
 	height: 590px;
 }
 
+/* #hero-con:hover {
+	background: url("../images/mobile-hero-image2.png");
+} */
+
 #hero-text {
 	grid-column: 1/-1;
 }
