--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ body {
     list-style: none;
     border: solid 3px #fff;
     border-radius: 3px;
-    margin-top: -500%;
+    margin-top: -218%;
     padding-left: 40px; 
     padding-right: 40px; 
     text-align: center;
@@ -236,8 +236,8 @@ body {
     color: #1f221a;
     font-size: 23px;
     position: absolute;
-    margin-top: 31%;
-    margin-left: 5%;
+    margin-top: 20%;
+    margin-left: 88px;
 }
 
 .shop-box1 h3 {
@@ -245,14 +245,25 @@ body {
     color: #1f221a;
     font-size: 23px;
     position: absolute;
-    margin-top: 31%;
-    margin-left: 6%;
+    margin-top: 20%;
+    margin-left: 118px;
+}
+
+.shop-box-o h3 {
+    list-style: none;
+    color: #1f221a;
+    font-size: 23px;
+    position: absolute;
+    margin-top: 20%;
+    margin-left: 111px;
 }
 
 .shop-box { 
     text-decoration: none;    
 }
-
+.shop-box-o { 
+    text-decoration: none;    
+}
 .shop-box1 { 
     text-decoration: none;    
 }
